logs/dag_id=run_fill_procedure/run_id=manual__2024-07-18T160838.218889+0000/task_id=fill_dm_account_balance_f/attempt=1.log
[2024-07-18T16:08:57.343+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-18T16:08:57.370+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: run_fill_procedure.fill_dm_account_balance_f manual__2024-07-18T16:08:38.218889+00:00 [queued]>
[2024-07-18T16:08:57.377+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: run_fill_procedure.fill_dm_account_balance_f manual__2024-07-18T16:08:38.218889+00:00 [queued]>
[2024-07-18T16:08:57.378+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-07-18T16:08:57.390+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): fill_dm_account_balance_f> on 2024-07-18 16:08:38.218889+00:00
[2024-07-18T16:08:57.396+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'run_fill_procedure', 'fill_dm_account_balance_f', 'manual__2024-07-18T16:08:38.218889+00:00', '--job-id', '463', '--raw', '--subdir', 'DAGS_FOLDER/create_and_fill_proc.py', '--cfg-path', '/tmp/tmprixbod96']
[2024-07-18T16:08:57.398+0000] {standard_task_runner.py:91} INFO - Job 463: Subtask fill_dm_account_balance_f
[2024-07-18T16:08:57.404+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=7504) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-07-18T16:08:57.405+0000] {standard_task_runner.py:63} INFO - Started process 7505 to run task
[2024-07-18T16:08:57.445+0000] {task_command.py:426} INFO - Running <TaskInstance: run_fill_procedure.fill_dm_account_balance_f manual__2024-07-18T16:08:38.218889+00:00 [running]> on host 7c7e02e57379
[2024-07-18T16:08:57.527+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='run_fill_procedure' AIRFLOW_CTX_TASK_ID='fill_dm_account_balance_f' AIRFLOW_CTX_EXECUTION_DATE='2024-07-18T16:08:38.218889+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-07-18T16:08:38.218889+00:00'
[2024-07-18T16:08:57.528+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-18T16:08:57.544+0000] {base.py:84} INFO - Using connection ID 'postgres_default' for task execution.
[2024-07-18T16:08:57.549+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-18T16:08:57.549+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/create_and_fill_proc.py", line 173, in fill_dm_account_balance_f
    cursor.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "<="
LINE 12:             while <= '2018-01-31' loop
                           ^

[2024-07-18T16:08:57.563+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=run_fill_procedure, task_id=fill_dm_account_balance_f, run_id=manual__2024-07-18T16:08:38.218889+00:00, execution_date=20240718T160838, start_date=20240718T160857, end_date=20240718T160857
[2024-07-18T16:08:57.573+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 463 for task fill_dm_account_balance_f (syntax error at or near "<="
LINE 12:             while <= '2018-01-31' loop
                           ^
; 7505)
[2024-07-18T16:08:57.595+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-18T16:08:57.604+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
